fixed accessibility issues

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     optimal team for your project Karma Regularly evaluates our talent to ensure
     quality Calculator Uses data from past projects to provide better delivery
     estimates -->
-    <section>
+    <main>
       <div class="header">
         <h1 class="heading-1">Reliable, efficient delivery</h1>
         <h1 class="heading-2">Powered by Technology</h1>
@@ -81,7 +81,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </main>
     <footer>
       <p class="attribution">
         Challenge by
